<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Yamba!</string>
    <string name="light_dark">Light/Dark</string>
    <string name="search">Search</string>
    <string name="compose">Compose</string>
    <string name="refresh">Refresh</string>
    <string name="authorization">Twitter Authorization</string>
    <string name="authorize">Authorize</string>
    <string name="username_hint">Enter username</string>
    <string name="background_data">Background Data</string>
    <string name="background_data_summary">Allow background updates?</string>
    <string name="text_size">Text size</string>
    <string name="preferences">Preferences</string>
</resources>
