<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:icon="@android:drawable/ic_menu_search"
    android:id="@+id/itemSearch"
    android:title="@string/search"
    android:showAsAction="ifRoom"
    android:actionViewClass="android.widget.SearchView" />
  <item
    android:id="@+id/toggleTheme"
    android:showAsAction="never"
    android:title="@string/light_dark" />
  <item
    android:id="@+id/itemCompose"
    android:title="@string/compose"
    android:showAsAction="always"
    android:icon="@drawable/ic_menu_compose" />
  <item
    android:id="@+id/itemRefresh"
    android:showAsAction="ifRoom"
    android:title="@string/refresh"
    android:icon="@drawable/ic_menu_refresh" />
  <item
    android:title="@string/authorize"
    android:id="@+id/itemAuthorize" />
  <item
    android:title="@string/preferences"
    android:id="@+id/itemPrefs"
    android:icon="@android:drawable/ic_menu_preferences" />

</menu>