<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center_horizontal">
  <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/authorization"
    android:textAppearance="?android:attr/textAppearanceLarge"></TextView>
  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/username"
    android:hint="@string/username_hint"
    android:textAppearance="?android:attr/textAppearanceLarge"

    android:inputType="textEmailAddress"></EditText>
  <Button
    android:id="@+id/authorize_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="onClickAuthorize"
    android:text="@string/authorize"
    android:textAppearance="?android:attr/textAppearanceLarge"></Button>
</LinearLayout>
